# man-pipeline

./: .gitignore  .prettierrc  CHANGELOG.md  COMPLETENESS_REPORT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PROJECT_STRUCTURE.md  README.md  RENAME_PROPOSAL.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
assets/: AudioEditor-08d8ed74.css  AudioEditor-7b7440c7.js  AudioEditor-c6c943ab.js  AudioEditor-f6d0300a.js  CharacterDesigner-8bee9601.js  CharacterDesigner-cb05ee8c.css  CharacterDesigner-d6f18610.js  CharacterDesigner-ecf59dc8.js  HomePage-26dbe893.css  HomePage-2d653290.js  HomePage-7432f45e.js  HomePage-b303eb80.js  NovelImporter-52dc4d7d.js  NovelImporter-964e4ba6.js  NovelImporter-c9d2520c.js  NovelImporter-e3a71c74.css  ProjectDetailPage-06651c4b.js  ProjectDetailPage-2c0d0334.css  ProjectDetailPage-9e1a273e.js  ProjectDetailPage-c7e29e79.js  ProjectEditPage-4048547b.js  ProjectEditPage-6cb6254c.js  ProjectEditPage-a374d304.css  ProjectEditPage-c1fdcf4c.js  ScriptDetailPage-2fe7b306.js  ScriptDetailPage-9507267e.js  ScriptDetailPage-ca1eab4d.css  ScriptDetailPage-d91b1626.js  ScriptEditor-022d3a82.js  ScriptEditor-587fcaaf.js  ScriptEditor-721f5f80.css  ScriptEditor-8eed880c.js  SettingsPage-49fd23e7.css  SettingsPage-795a010b.js  SettingsPage-8b06b66c.js  SettingsPage-925188cf.js  StoryboardEditor-032e5600.css  (+137 more)
docs/: FAQ.md  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+401 files in other folders)
